// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/content/checkboxElement should change title 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
      value="off"
    />
    <div
      class="EditableAreaWrap"
    >
      <textarea
        class="EditableArea Editable undefined"
        height="0"
        placeholder="Edit text..."
        rows="1"
        spellcheck="true"
        title="new title"
      >
        new title
      </textarea>
      <div
        class="EditableAreaContainer"
      >
        <textarea
          aria-hidden="true"
          class="EditableAreaReference Editable undefined"
          dir="auto"
          disabled=""
          rows="1"
        >
          new title
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/content/checkboxElement should match snapshot 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
      value="off"
    />
    <div
      class="EditableAreaWrap"
    >
      <textarea
        class="EditableArea Editable undefined"
        height="0"
        placeholder="Edit text..."
        rows="1"
        spellcheck="true"
        title="test-title"
      >
        test-title
      </textarea>
      <div
        class="EditableAreaContainer"
      >
        <textarea
          aria-hidden="true"
          class="EditableAreaReference Editable undefined"
          dir="auto"
          disabled=""
          rows="1"
        >
          test-title
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/content/checkboxElement should match snapshot when read only 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      disabled=""
      id="checkbox-test-id"
      type="checkbox"
      value="off"
    />
    <div
      class="EditableAreaWrap"
    >
      <textarea
        class="EditableArea Editable readonly undefined"
        height="0"
        placeholder="Edit text..."
        readonly=""
        rows="1"
        spellcheck="true"
        title="test-title"
      >
        test-title
      </textarea>
      <div
        class="EditableAreaContainer"
      >
        <textarea
          aria-hidden="true"
          class="EditableAreaReference Editable readonly undefined"
          dir="auto"
          disabled=""
          rows="1"
        >
          test-title
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/content/checkboxElement should toggle value 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
      value="on"
    />
    <div
      class="EditableAreaWrap"
    >
      <textarea
        class="EditableArea Editable undefined"
        height="0"
        placeholder="Edit text..."
        rows="1"
        spellcheck="true"
        title="test-title"
      >
        test-title
      </textarea>
      <div
        class="EditableAreaContainer"
      >
        <textarea
          aria-hidden="true"
          class="EditableAreaReference Editable undefined"
          dir="auto"
          disabled=""
          rows="1"
        >
          test-title
        </textarea>
      </div>
    </div>
  </div>
</div>
`;
